<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_recyclerview_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/middle_margin">

    <ImageView
        android:id="@+id/poster_imageview"
        android:layout_width="@dimen/imageView_width"
        android:layout_height="@dimen/imageView_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:inputType="textMultiLine"
        android:text="@string/primary_poster_title"
        android:textSize="@dimen/big_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_imageview"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/overview"
        android:ellipsize="end"
        android:maxLines="8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/middle_margin"
        android:text="@string/overview_text"
        android:textSize="@dimen/middle_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_imageview"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginTop="@dimen/middle_margin"
        android:text="@string/release_date_text"
        android:textSize="@dimen/middle_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/poster_imageview"/>

</androidx.constraintlayout.widget.ConstraintLayout>